# biomedical-terminology-service

./: .editorconfig  .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yaml  example.env  graphql.config.yaml  pyproject.toml  sonar-project.properties
.github/: FUNDING.yml
.github/workflows/: build-docker.yaml  build-docker.yaml.yml  code-analysis.yaml
conf/: uvicorn-log.config.yaml
docs/: requirements.txt
docs/source/: about.rst  build-database.rst  conf.py  fhir.rst  graphql.rst  index.rst  installation.rst  vocabularies.rst
docs/source/similarity-methods/: co-annotation.rst  index.rst  relevance.rst
docs/source/usage/: auto-complete.rst  data-management.rst  expansion.rst  index.rst  mapping.rst  search.rst  similarity.rst  trace.rst
experiments/: README.md
experiments/gat/: .gitignore  01_export_nodes.py  02_export_edges.py  03_export_embeddings.py  04_pack_edges.py  05_clean_up_data.py  README.md  config.py  diagnose_equivalent_relationships.py  export_embeddings.py  requirements.txt  smoke_train.py  train_gat.py  upload_to_qdrant.py
experiments/owl2vec/: build_csr.py  config.py  export_embeddings.py  train_owl2vec.py  utils_io.py  utils_walks.py
experiments/r_gnn/: config.json
experiments/r_gnn/export/: README.md  ctv3.py  merge.py  utils.py
scripts/: docker-compose.dependencies.yaml  dump_reactome_to_csv.py  entrypoint.sh  load_offline_annotations.py  load_offline_vocabulary.py
src/bioterms/: __init__.py  app.py  asgi.py
src/bioterms/annotation/: __init__.py  ctv3_snomed.py  gene_hpo.py  gene_ncit.py  gene_omim.py  gene_ordo.py  hgnc_mondo.py  hpo_mondo.py  hpo_ordo.py  mondo_ncit.py  mondo_omim.py  mondo_ordo.py  mondo_snomed.py  ncit_ohdsi.py  ohdsi_snomed.py  omim_ordo.py  ordo_snomed.py  utils.py
src/bioterms/cli/: annotation.py  cache.py  cli.py  similarity.py  user.py  utils.py  vocabulary.py
src/bioterms/data/graphql/: concept.graphql  ctv3.graphql  ctv3_snomed.graphql  ensembl.graphql  gene.graphql  gene_hpo.graphql  gene_ncit.graphql  gene_omim.graphql  gene_ordo.graphql  hgnc.graphql  hgnc_mondo.graphql  hpo.graphql  hpo_mondo.graphql  hpo_ordo.graphql  mondo.graphql  mondo_ncit.graphql  mondo_omim.graphql  mondo_ordo.graphql  mondo_snomed.graphql  ncit.graphql  ncit_ohdsi.graphql  ohdsi.graphql  ohdsi_snomed.graphql  omim.graphql  omim_ordo.graphql  ordo.graphql  ordo_snomed.graphql  reactome.graphql  snomed.graphql
src/bioterms/data/licenses/: ctv3.md  ensembl.md  hgnc_symbol.md  hpo.md  mondo.md  ncit.md  ohdsi.md  omim.md  ordo.md  reactome.md  snomed.md
src/bioterms/data/static/css/: custom.css
src/bioterms/data/static/js/: api_keys.js  vocabularies.js
src/bioterms/data/templates/: 404.html  500.html  api_keys.html  base.html  concept_detail.html  create_new_api_key.html  display_new_api_key.html  home.html  login.html  vocabularies.html  vocabulary_detail.html
src/bioterms/database/: __init__.py
src/bioterms/database/cache/: __init__.py  cache.py  redis_cache.py
src/bioterms/database/doc_db/: __init__.py  doc_db.py  mongo_doc_db.py  sql_doc_db.py  sqlite_doc_db.py  utils.py
src/bioterms/database/graph_db/: __init__.py  graph_db.py  memory_graph_db.py  neo4j_graph_db.py
src/bioterms/database/vector_db/: __init__.py  qdrant_vector_db.py  vector_db.py
src/bioterms/embedding/: __init__.py  concept_transformer.py  container.py  text_transformer.py
src/bioterms/etc/: asgi_management.py  consts.py  enums.py  errors.py  metrics.py  utils.py
src/bioterms/graphql_api/: __init__.py  schemas.py
src/bioterms/graphql_api/data_loader/: __init__.py  concept.py  data_loader.py  reactome.py
src/bioterms/graphql_api/resolver/: ctv3.py  ctv3_snomed.py  ensembl.py  gene.py  gene_hpo.py  gene_ncit.py  gene_omim.py  gene_ordo.py  hgnc.py  hgnc_mondo.py  hpo.py  hpo_mondo.py  hpo_ordo.py  mondo.py  mondo_ncit.py  mondo_omim.py  mondo_ordo.py  mondo_snomed.py  ncit.py  ncit_ohdsi.py  ohdsi.py  ohdsi_snomed.py  omim.py  omim_ordo.py  ordo.py  ordo_snomed.py  reactome.py  snomed.py  utils.py
src/bioterms/mcp_api/: __init__.py  app.py  resource.py  tool.py
src/bioterms/model/: annotation.py  annotation_status.py  base.py  concept.py  concept_path.py  expanded_term.py  related_term.py  similar_term.py  similarity_status.py  translated_term.py  user.py  vocabulary_status.py
src/bioterms/model/concept/: __init__.py  concept.py  ensembl.py  gene.py  hgnc.py  ohdsi.py  reactome.py  snomed.py
src/bioterms/router/: __init__.py  auto_complete.py  data.py  expand.py  fhir.py  map.py  misc.py  search.py  similarity.py  trace.py  ui.py  utils.py
src/bioterms/similarity/: __init__.py  co_annotation.py  gnn.py  relevance.py  relevance_weight.py  utils.py
src/bioterms/task/: app.py  cache.py  utils.py
src/bioterms/vocabulary/: __init__.py  ctv3.py  ensembl.py  hgnc.py  hgnc_symbol.py  hpo.py  mondo.py  ncit.py  ohdsi.py  omim.py  ordo.py  reactome.py  snomed.py  utils.py
term-browser/: index.html  package-lock.json  package.json  vite.config.js
term-browser/src/: App.css  App.jsx  index.css  main.jsx
term-browser/src/components/: DetailsPanel.jsx  SearchBar.jsx  TermBrowser.jsx  TreeView.jsx
term-browser/src/data/: ontologyConfig.js  sampleOntology.js
term-browser/src/services/: graphql.js
tests/: conftest.py
tests/function_test/router/: test_cache_control_middleware.py  test_data.py  test_query_paths.py
tests/load_test/common/: randoms.py  user.py
tests/load_test/users/: auto_complete_user.py  data_user.py  expansion_user.py  map_user.py  search_user.py  similarity_user.py
tests/unit_test/: test_etc_utils.py  test_offline_annotation_curie.py  test_offline_annotation_import_script.py  test_offline_no_db_dependency.py  test_offline_vocabulary_import_script.py
tests/unit_test/database/: test_redis_cache.py
tests/unit_test/model/: test_concept.py
tests/unit_test/router/: test_auto_complete.py  test_utils.py
