[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioterms"
authors = [
  { name="Firefox2100", email="wangyunze16@gmail.com" },
]
description = "Biomedical Terminology Service"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiodataloader~=0.4.3",
    "aiofiles~=25.1.0",
    "ariadne~=0.26.2",
    "argon2-cffi~=25.1.0",
    "asgi-csrf~=0.11",
    "fastapi~=0.123.0",
    "httpx~=0.28.1",
    "itsdangerous~=2.2.0",
    "jinja2~=3.1.6",
    "markdown~=3.10",
    "networkx~=3.6",
    "numpy~=2.3.5",
    "owlready2~=0.49",
    "pandas~=2.3.3",
    "prometheus-client~=0.23.1",
    "pyyaml~=6.0.2",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "rich~=14.2.0",
    "sentence-transformers~=5.1.2",
    "torch-geometric~=2.7.0",
    "transformers~=4.57.3",
    "tqdm~=4.67.1",
    "typer~=0.20.0",
    "uvicorn~=0.38.0",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
test = [
    "aiosqlite~=0.21.0",
    "deepdiff~=8.6.1",
    "neo4j~=6.0.3",
    "pytest~=9.0.1",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "pylint~=4.0.4",
    "pymongo~=4.15.4",
    "qdrant-client~=1.16.1",
    "redis~=7.1.0",
]
aiosqlite = [
    "aiosqlite~=0.21.0",
]
pymongo = [
    "pymongo~=4.15.4",
]
neo4j = [
    "neo4j~=6.0.3",
]
qdrant = [
    "qdrant-client~=1.16.1",
]
redis = [
    "redis~=7.1.0",
]
all = [
    "pymongo~=4.15.4",
    "neo4j~=6.0.3",
    "qdrant-client~=1.16.1",
    "redis~=7.1.0",
]

[project.urls]
Homepage = "https://github.com/Firefox2100/biomedical-terminology-service"
Repository = "https://github.com/Firefox2100/biomedical-terminology-service.git"
Issues = "https://github.com/Firefox2100/biomedical-terminology-service/issues"

[project.scripts]
bioterms-cli = "bioterms.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "bioterms.__version__"}
