[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioterms"
authors = [
  { name="Firefox2100", email="wangyunze16@gmail.com" },
]
description = "Biomedical Terminology Service"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiodataloader~=0.4.3",
    "aiofiles~=25.1.0",
    "ariadne~=1.1.0",
    "argon2-cffi~=25.1.0",
    "asgi-csrf~=0.11",
    "celery~=5.6.3",
    "fastapi~=0.139.2",
    "fastmcp~=3.4.4",
    "fhir.resources~=8.3.0",
    "httpx~=0.28.1",
    "itsdangerous~=2.2.0",
    "jinja2~=3.1.6",
    "markdown~=3.10.2",
    "networkx~=3.6.1",
    "numpy~=2.4.4",
    "owlready2~=0.51",
    "pandas~=3.0.3",
    "pyyaml~=6.0.2",
    "pydantic~=2.13.4",
    "pydantic-settings~=2.14.2",
    "pytheus~=0.6.1",
    "rich~=15.0.0",
    "sentence-transformers~=5.6.0",
    "torch-geometric~=2.8.0",
    "transformers~=5.14.1",
    "tqdm~=4.69.0",
    "typer~=0.27.0",
    "uvicorn~=0.51.0",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
test = [
    "deepdiff~=9.1.0",
    "locust~=2.46.0",
    "neo4j~=6.2.0",
    "pytest~=9.1.1",
    "pytest-asyncio~=1.4.0",
    "pytest-cov~=7.1.0",
    "pylint~=4.0.6",
    "pymongo~=4.17.0",
    "qdrant-client~=1.18.0",
    "redis~=8.0.1",
    "sentry-sdk[fastapi]~=2.66.0",
    "sqlalchemy~=2.0.51",
]
pymongo = [
    "pymongo~=4.17.0",
]
neo4j = [
    "neo4j~=6.2.0",
]
qdrant = [
    "qdrant-client~=1.18.0",
]
redis = [
    "redis~=8.0.1",
]
sentry = [
    "sentry-sdk[fastapi]~=2.66.0",
]
sql = [
    "sqlalchemy~=2.0.51",
]
all = [
    "pymongo~=4.17.0",
    "neo4j~=6.2.0",
    "qdrant-client~=1.18.0",
    "redis~=8.0.1",
    "sentry-sdk[fastapi]~=2.66.0",
    "sqlalchemy~=2.0.51",
]

[project.urls]
Homepage = "https://github.com/Firefox2100/biomedical-terminology-service"
Repository = "https://github.com/Firefox2100/biomedical-terminology-service.git"
Issues = "https://github.com/Firefox2100/biomedical-terminology-service/issues"

[project.scripts]
bioterms-cli = "bioterms.cli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "bioterms.__version__"}

[tool.locust]
locustfile = "tests/load_test/users/"
